Updates on First Draft

--- a/desktop-view.html
+++ b/desktop-view.html
@@ -58,7 +58,7 @@
             <div class="workspace"><!--workspace-->
                 <div class="s1"><!-- 1 to 4-->
                     <div>
-                        <div>
+                        <div class="seat">
                         </div>PC2
                     </div>
                     <div>
