--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link href="base-style.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Exo:300,300i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text:500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Teko:300,400,500,600,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -27,48 +28,44 @@
             </nav>
             <main>
                 <div class="session">
-                    <div class="firstRow">
-                        <span>
-                            <span class="topLeft">Bob Joe</span><span>PC 1</span><span>10:30 - <input type="text" /></span><span>2h35m remaining</span>
-                        </span>
-                        <span></span>
-                        <span>
-                            <span>Pause</span><span class=topRight>Logout</span>
-                        </span>
-                    </div>
-                    <div class="secondRow">
-                        <span>
-                            <span class="bottomLeft">tab</span>
-                            <span class="tabRecord"><input type="text" /></span>
-                        </span>
-                        <span></span>
-                        <span>
-                            <span>equipment</span>
-                            <span class="bottomRight"><input type="text" /></span>
-                        </span>
-                    </div>
+                    <form>
+                        <div class="firstRow">
+                            <span class="left">
+                                <span class="topLeft">Bob Joe</span><span>PC 1</span><span>10:30 - <input type="text" /></span><span>2h35m remaining</span>
+                            </span>
+                            <span class="right">
+                                <span>Pause</span><span class=topRight>Logout</span>
+                            </span>
+                        </div>
+                        <div class="secondRow">
+                            <span class="left">
+                                <span class="bottomLeft">tab</span><span class="tabRecord"><input type="text" /></span>
+                            </span>
+                            <span class="right">
+                                <span>equipment</span><span class="bottomRight"><input type="text" /></span>
+                            </span>
+                        </div>
+                    </form>
                 </div>
                 <div class="session">
-                    <div class="firstRow">
-                        <span>
-                            <span class="topLeft">Bob Joe</span><span>PC 1</span><span>10:30 - <input type="text" /></span><span>2h35m remaining</span>
-                        </span>
-                        <span></span>
-                        <span>
-                            <span>Pause</span><span class=topRight>Logout</span>
-                        </span>
-                    </div>
-                    <div class="secondRow">
-                        <span>
-                            <span class="bottomLeft">tab</span>
-                            <span class="tabRecord"><input type="text" /></span>
-                        </span>
-                        <span></span>
-                        <span>
-                            <span>equipment</span>
-                            <span class="bottomRight"><input type="text" /></span>
-                        </span>
-                    </div>
+                    <form>
+                        <div class="firstRow">
+                            <span class="left">
+                                <span class="topLeft">Bob Joe</span><span>PC 1</span><span>10:30 - <input type="text" /></span><span>2h35m remaining</span>
+                            </span>
+                            <span class="right">
+                                <span>Pause</span><span class=topRight>Logout</span>
+                            </span>
+                        </div>
+                        <div class="secondRow">
+                            <span class="left">
+                                <span class="bottomLeft">tab</span><span class="tabRecord"><input type="text" /></span>
+                            </span>
+                            <span class="right">
+                                <span>equipment</span><span class="bottomRight"><input type="text" /></span>
+                            </span>
+                        </div>
+                    </form>
                 </div>
             </main>
         </section>
