started user panel

--- a/index.html
+++ b/index.html
@@ -69,7 +69,34 @@
                 </div>
             </main>
             <main id="view2">
-                User View
+                <div class="users">
+                    <table>
+                        <tr>
+                            <th>#</th>
+                            <th>Phone</th>
+                            <th>Name</th>
+                            <th>Hrs</th>
+                            <th>Email</th>
+                            <th>B-day</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Joe Bob</td>
+                            <td>2.5</td>
+                            <td>joebob89@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                    </table>
+                </div>
             </main>
             <main id="view3">
                 Reservation View
