added log in button

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                         </div>
                     </form>
                 </div>
+                <div class="login">
+                    <span>Log in</span><div class="plus"><span>+</span></div>
+                </div>
             </main>
             <main id="view2">
                 <div class="users">
