added images, users panel is furher along

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="ddg-logo.png">
                 </span>
             </span>
-            <span>12:00</span>
+            <span class="time">12:00</span>
             <span>Wednesday, January 1, 2020</span>
         </header>
         <section id="left" class="left panel view1">
@@ -51,7 +51,7 @@
                     <form>
                         <div class="firstRow">
                             <span class="left">
-                                <span class="topLeft">Bob Joe</span><span>PC 1</span><span>10:30 - <input type="text" /></span><span>2h35m remaining</span>
+                                <span class="topLeft">Mathieu Belliveau</span><span>PC 2</span><span>10:30 - <input type="text" /></span><span>2h35m remaining</span>
                             </span>
                             <span class="right">
                                 <span>Pause</span><span class=topRight>Logout</span>
@@ -93,13 +93,335 @@
                         <tr>
                             <td>2</td>
                             <td>506-666-7777</td>
-                            <td>Joe Bob</td>
+                            <td>Mathieu Belliveau</td>
                             <td>2.5</td>
-                            <td>joebob89@gmail.com</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
+                            <td>01/31</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>506-777-6666</td>
+                            <td>Bob Joe</td>
+                            <td>5</td>
+                            <td>bob.joe@hotmail.com</td>
+                            <td>09/13</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>506-666-7777</td>
+                            <td>Mathieu Belliveau</td>
+                            <td>2.5</td>
+                            <td>mbelliveau6097@gmail.com</td>
                             <td>01/31</td>
                         </tr>
                     </table>
                 </div>
+                <div class="search"><span>SEARCH</span><br>
+                    <input type="text"><br><button>Clear</button><button>Add</button></div>
             </main>
             <main id="view3">
                 Reservation View
@@ -110,10 +432,44 @@
         </section>
         <section id="right" class="right panel view1">
             <nav>
-                <span class="viewButton1" onclick="document.getElementById('right').className = 'right panel view1'">Room 1</span>
-                <span class="viewButton2" onclick="document.getElementById('right').className = 'right panel view2'">Room 2</span>
+                <span class="viewButton1" onclick="document.getElementById('right').className = 'right panel view1'">PC Room</span>
+                <span class="viewButton2" onclick="document.getElementById('right').className = 'right panel view2'">Consoles + VR</span>
             </nav>
-            <main>
+            <main id="view1">
+                <table>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                    </tr>
+                    <tr>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                    </tr>
+                    <tr>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><img src="desk.png"></td>
+                        <td><img src="desk.png"></td>
+                    </tr>
+                </table>
+            </main>
+            <main id="view2">
                 
             </main>
         </section>
