--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:500,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Teko:300,400,500,600,700&display=swap" rel="stylesheet">
-        <script src="jquery-3.4.1.min.js"></script>
-        <script src="scripts.js"></script>
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="scripts/scripts.js"></script>
     </head>
     <body>
         <header>
