several small changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>DDG POS 0.0.1</title>
         <link href="base-style.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Exo:300,300i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Exo+2:300,300i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:500,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Teko:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -70,7 +70,7 @@
                 <div class="login">
                     <span>Log in</span><div class="plus"><span>+</span></div>
                 </div>
-            </main>
+            </main><!-- #view1 -->
             <main id="view2">
                 <div class="users">
                     <table>
@@ -415,20 +415,20 @@
                             <td>506-666-7777</td>
                             <td>Mathieu Belliveau</td>
                             <td>2.5</td>
-                            <td>mbelliveau6097@gmail.com</td>
+                            <td>mbelliveau6097@hotmail.com</td>
                             <td>01/31</td>
                         </tr>
                     </table>
                 </div>
                 <div class="search"><span>SEARCH</span><br>
                     <input type="text"><br><button>Clear</button><button>Add</button></div>
-            </main>
+            </main><!-- #view2 -->
             <main id="view3">
                 Reservation View
-            </main>
+            </main><!-- #view3 -->
             <main id="view4">
                 Systems View
-            </main>
+            </main><!-- #view4 -->
         </section>
         <section id="right" class="right panel view1">
             <nav>
